--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 				</li>
 			</ul>
 			<footer class="panel-footer">
-				<input ng-model="addMe" class="form-control" placeholder="Add shopping items here">
+				<input ng-model="addMe" placeholder="Add shopping items here">
 				<button ng-click="addItem()" class="btn btn-success btn-lg pull-right">Add</button>
 				<h3>{{errormessage}}</h3>
 			</footer>
